--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,31 +20,21 @@
       <!-- Use *ngFor to loop through the rows -->
       <tr *ngFor="let row of rows; let i = index;">
         <td>
-          <!-- <input type="text" class="form-control" name="productName" [(ngModel)]="row.productName"
-            (input)="calculateAmount(row)" [ngModelOptions]="{standalone: true}" (focus)="showDropdown = true"
-            (blur)="hideDropdown()" placeholder="Enter product">
-          <div *ngIf="showDropdown && row.productName" class="dropdown">
-             <ul class="dropdown-menu">
-              <li *ngFor="let product of productData | filter: row.productName">
-                <a ></a>
-              </li>
-            </ul> 
-          
-          </div> -->
-          <ng-select  [(ngModel)]="row.productName">
+          <ng-select [(ngModel)]="row.productName" [style.width.px]="250"
+            (change)="updateRatePerKg(row, row.productName)">
             <ng-option *ngFor="let product of productData" [value]="product.billingName">
               {{ product.billingName }} - Rs.{{ product.ratePerKg }}
             </ng-option>
-         </ng-select>
-         
+          </ng-select>
         </td>
         <td><input type="number" class="form-control" name="ratePerKg" [(ngModel)]="row.ratePerKg"
             (input)="calculateAmount(row)" (keypress)="validateInput($event)"></td>
         <td><input type="text" class="form-control" name="quantity" [(ngModel)]="row.quantity"
             (input)="calculateAmount(row)" (keypress)="validateInput($event)"></td>
         <td><input type="number" class="form-control" [(ngModel)]="row.amount" disabled></td>
-        <td><button class="btn btn-danger" (click)="removeRow(i)">X</button></td>
-        <td><button class="btn btn-success"style="width: 80px;">Save</button></td>
+        <td><button class="btn btn-danger" (click)="removeRow(i)">Delete</button></td>
+        <td><button class="btn btn-success" style="width: 80px;"
+            [disabled]="!row.productName || !row.ratePerKg || !row.quantity">Save</button></td>
       </tr>
       <tr>
         <td colspan="2"></td>
@@ -56,6 +46,26 @@
   </table>
   <button class="btn btn-primary top-left-button " (click)="addRow()">Add Product</button>
   <div>
-    <button class="top-right-button" (click)="printTable()">print Table</button>
+    <button class="top-right-button" (click)="printTable()" [disabled]="shouldDisablePrintButton()">print Table</button>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+<!-- <input type="text" class="form-control" name="productName" [(ngModel)]="row.productName"
+            (input)="calculateAmount(row)" [ngModelOptions]="{standalone: true}" (focus)="showDropdown = true"
+            (blur)="hideDropdown()" placeholder="Enter product">
+          <div *ngIf="showDropdown && row.productName" class="dropdown">
+             <ul class="dropdown-menu">
+              <li *ngFor="let product of productData | filter: row.productName">
+                <a ></a>
+              </li>
+            </ul> 
+          </div> -->
